--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,11 @@ dj-database-url==0.5.0
 Django==1.11
 django-bootstrap4==0.0.7
 django-heroku==0.3.1
+django-materialize==1.0.1a2
+django-materializecss-form==1.1.11
 django-registration==2.4.1
 django-tinymce==2.7.0
+djangorestframework==3.9.0
 gunicorn==19.9.0
 Pillow==5.3.0
 psycopg2==2.7.6.1
