modified wsgi settings

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ SECRET_KEY='l9sprb@rw95)5k^zersljg4q9yz-j4rjk6h13(iso_*c3tfuh@'
 DEBUG=True
 DB_NAME='award'
 DB_USER='moringaschool'
-DB_PASSWORD='cliff123'
+DB_PASSWORD='cliff'
 DB_HOST='127.0.0.1'
 MODE='dev'
 ALLOWED_HOSTS='*'
